# atomica

./: .gitignore  .gitmodules  COMPLETION_REPORT.md  PRD.md  PROJECT_OVERVIEW.md  Prd-v1-archive.md  README.md  START_HERE.md  atomic-guarantee-mechanism.md  cpmm-vs-auction.md  liquidity-provision.md  payment-channel-option.md  timelock-bids.md
.claude/agents/: engineer.md  librarian.md  rust-systems-engineer.md
.claude/commands/: pullrequest.md
.github/workflows/: README.md  build-aptos-binary.yaml  build-docker-images.yml  deploy-pages.yml  diem-prover-ci.yaml.todo  diem-prover-release.yaml.todo  docker-testnet-example.yml  docker-testnet-sanity.yml  lint-web.yaml  test-integration.yaml.todo  test-move.yaml.todo  test-web.yaml  warmup-cache.yaml
contracts/aptos-bridge/: README.md
docker-testnet/: .dockerignore  .env  Dockerfile  Makefile  QUICKSTART.md  README.md  build-local-image.sh  build.sh  docker-compose.yaml
docs/analysis/: README.md  bear-market.md  continuous-vs-auction-markets.md  dex-complementarity-communication-strategy.md  gtm-pull-strategy.md  (+6 more)
source/: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  benchmark-comparison.sh
source/atomica-test-runner/: Cargo.toml
source/atomica-test-runner/src/: env.rs  lib.rs
source/atomica-test-runner/src/tests/: auction_workflow.rs  cross_chain_workflow.rs  mod.rs
source/atomica-tx-debugger/: Cargo.toml  README.md
source/atomica-tx-debugger/.cargo/: config.toml
source/atomica-tx-debugger/src/: lib.rs  offline_runner.rs
source/atomica-tx-debugger/tests/: e2e_tests.rs
source/diem-prover-circom/: .gitignore  BENCHMARKING.md  Cargo.toml  README.md  TEST_METHODOLOGY.md  run_benchmarks.sh
source/diem-prover-circom/.cargo/: config.toml
source/diem-prover-circom/host/: Cargo.toml  build.rs
source/diem-prover-circom/host/benches/: eq_proving.rs
source/diem-prover-circom/host/src/: lib.rs
source/diem-prover-circom/host/tests/: eq_test.rs  evm_verification_test.rs  invalid_circuit_test.rs  invalid_witness_test.rs  mismatched_keys_test.rs  noop_test.rs  proof_tampering_test.rs
source/diem-prover-circom/solidity/src/: GeneratedVerifier.sol  SimpleGroth16Verifier.sol
source/diem-prover-halo2/: .gitignore  Cargo.toml  kzg_bn254_9.srs  proving_system_comparison.md  spec.md
source/diem-prover-halo2/data/: README.md
source/diem-prover-halo2/solidity/: bad_proof_data.json  foundry.toml  proof_data.json
source/diem-prover-halo2/solidity/src/: Verifier.sol
source/diem-prover-halo2/solidity/test/: Verifier.t.sol
source/diem-prover-halo2/src/: auction.rs  circuit.rs  lib.rs
source/diem-prover-halo2/tests/: auction.rs  equivalence.rs  ptau_converter.rs  solidity_verifier.rs
source/diem-prover-halo2/tests/common/: mod.rs
source/diem-prover-plonk/: ARCHITECTURE_GUIDE.md  BENCHMARKING.md  Cargo.toml  DOCUMENTATION_INDEX.md  IMPLEMENTATION_SUMMARY.md  PLONKY3_EXPLORATION_SUMMARY.txt  PLONKY3_RESEARCH.md  PLONK_IN_PLONKY3_INVESTIGATION.md  QUICK_REFERENCE.md  README.md
source/diem-prover-plonk/circuits/: eq.circom
source/diem-prover-plonk/host/: Cargo.toml
source/diem-prover-plonk/host/benches/: eq_proving.rs
source/diem-prover-plonk/host/examples/: dual_verification_demo.rs  equality_demo.rs  verify_real_proofs.rs
source/diem-prover-plonk/host/src/: eq_air.rs  lib.rs
source/diem-prover-plonk/host/src/verifier/: mod.rs  plonk_wrapper.rs  snark_wrapper.rs  types.rs
source/diem-prover-plonk/host/tests/: dual_verification.rs  eq_test.rs
source/diem-prover-plonk/solidity/: foundry.toml
source/diem-prover-plonky3/: Cargo.toml  README.md  test_integration.rs
source/diem-prover-plonky3/docs/: PLONK_WRAPPER_REFERENCE.md  SPEC.md
source/diem-prover-plonky3/host/: Cargo.toml
source/diem-prover-plonky3/host/benches/: eq_proving.rs
source/diem-prover-plonky3/host/examples/: dual_verification_demo.rs  equality_demo.rs  verify_real_proofs.rs
source/diem-prover-plonky3/host/src/: eq_air.rs
source/diem-prover-plonky3/host/src/verifier/: mod.rs  native_stark.rs  snark_wrapper.rs
source/diem-prover-plonky3/host/tests/: dual_verification.rs  e2e_tests.rs  eq_test.rs
source/diem-prover-plonky3/solidity/src/: Groth16Verifier.sol  PlonkVerifier.sol  SimpleGroth16Verifier.sol  TwoStarkVerifierMock.sol
source/diem-prover-sp1/host/: Cargo.toml  build.rs
source/diem-prover-sp1/host/benches/: proof_modes.rs
source/diem-prover-sp1/host/src/: ethereum_client.rs
source/diem-prover-sp1/host/tests/: dual_verification_test.rs  noop_test.rs  proof_generation.rs
source/diem-prover-stwo/: .gitignore  Cargo.toml  EVM_VERIFIER.md  EVM_VERIFIER_SOLUTIONS.md  README.md
source/diem-prover-stwo/.cargo/: config.toml
source/diem-prover-stwo/circuits/: compile.sh  noop.circom
source/diem-prover-stwo/host/: Cargo.toml  build.rs
source/diem-prover-stwo/host/examples/: equality_demo.rs
source/diem-prover-stwo/host/src/: eq_air.rs  lib.rs
source/diem-prover-stwo/host/tests/: eq_test.rs
source/diem-prover-stwo/solidity/src/: TwoStarkVerifierMock.t.sol
source/diem-prover-zkp/: .env.example  .pre-commit-config.yaml  CI_CD_SETUP.md  Cargo.toml  DEVELOPMENT.md  LIBRARY_APPROACH.md  LINTING_SETUP.md  MIGRATION_GUIDE.md  README.md  README_NEW.md  REDESIGN.md  SUMMARY.md  package.json  rustfmt.toml
source/diem-prover-zkp/contracts/: ZKDiemLightClient.sol  foundry.toml
source/diem-prover-zkp/guest/: Cargo.toml
source/diem-prover-zkp/guest-noop/: Cargo.toml
source/diem-prover-zkp/guest-noop/src/: main.rs
source/diem-prover-zkp/guest/.cargo/: config.toml
source/diem-prover-zkp/host/: Cargo.toml  build.rs
source/diem-prover-zkp/host/src/: aptos_client.rs  main.rs  types.rs
source/diem-prover-zkp/host/tests/: noop_test.rs  proof_generation.rs
source/diem-prover-zkp/prover/: Cargo.toml
source/diem-prover-zkp/prover/src/: prover.rs
source/docker-testnet/rust-sdk/: Cargo.toml
source/docker-testnet/rust-sdk/src/: lib.rs
source/docker-testnet/rust-sdk/tests/: basic_test.rs  local_build_test.rs
source/web/: app.js  (+6 more)
tests/: Cargo.toml  testnet_basic.rs
tests/docker_harness/: mod.rs
(+319 files in other folders)
