[package]
name = "atomica-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Core dependencies
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# HTTP client for REST API calls
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Testing utilities
serial_test = "3.0"

[lib]
name = "docker_harness"
path = "docker_harness/mod.rs"

[[test]]
name = "testnet_basic"
path = "testnet_basic.rs"
harness = true
