[workspace]
members = ["host"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
ark-circom = "0.5"
ark-bn254 = "0.5"
ark-ec = "0.5"
ark-ff = "0.5"
ark-groth16 = "0.5"
ark-relations = "0.5"
ark-snark = "0.5"
ark-std = "0.5"
num-bigint = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
hex = "0.4"
