[workspace]
members = ["host"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Stwo prover dependencies - pinned to specific commit for reproducibility
stwo = { git = "https://github.com/starkware-libs/stwo.git", rev = "f7179282222b7e976c2b76396ecde63d8da2d330", features = ["prover", "parallel"] }
stwo-constraint-framework = { git = "https://github.com/starkware-libs/stwo.git", rev = "f7179282222b7e976c2b76396ecde63d8da2d330", features = ["prover", "parallel"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
hex = "0.4"
itertools = "0.13"
num-traits = "0.2"
