[workspace]
members = ["guest", "host"]
resolver = "2"

[workspace.dependencies]
# SP1 dependencies
sp1-zkvm = "1.2.0"
sp1-sdk = "1.2.0"
sp1-helper = "1.2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Crypto
hex = "0.4"
sha3 = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
