[workspace]
members = ["guest", "host"]
resolver = "2"

[workspace.dependencies]
# SP1 dependencies
sp1-zkvm = "1.2.0"
sp1-sdk = "1.2.0"
sp1-helper = "1.2.0"

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Crypto
hex = "0.4"
sha3 = "0.10"

# Common dependencies - unified versions to reduce duplicates
itertools = "0.13.0"
hashbrown = "0.16.0"
rand = "0.8.5"
rand_core = "0.6.4"
rand_chacha = "0.3.1"
getrandom = "0.2.16"
base64 = "0.22.1"
heck = "0.5.0"
derive_more = "1.0.0"
strum = "0.27.2"
strum_macros = "0.27.2"
arrayvec = "0.7.6"
thiserror = "1.0.69"
anyhow = "1.0"
# Pin tokio to 1.41 - disable_lifo_slot() was removed in 1.42+
tokio = { version = "=1.41.0", features = ["full"] }

# Ark cryptography - unified versions
ark-ff = "0.4.2"
ark-std = "0.4.0"
ark-serialize = "0.4.2"

# Hashing
hmac = "0.12.1"
pbkdf2 = "0.12.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
dotenv = "0.15"

# Ethereum (for future on-chain verification)
ethers = "2.0"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# Guest-specific release profile optimizations for zkVM
# Note: Only opt-level and codegen-units can be overridden per-package
[profile.release.package.diem-guest]
opt-level = 3
codegen-units = 1

[profile.release.build-override]
opt-level = 3

[profile.dev]
opt-level = 0
