[package]
name = "diem-prover-circom"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
ark-circom = { workspace = true }
ark-bn254 = { workspace = true }
ark-groth16 = { workspace = true }
ark-relations = { workspace = true }
ark-std = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-snark = { workspace = true }
num-bigint = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
anyhow = { workspace = true }
foundry-compilers = { version = "0.11", features = ["project-util"] }
hex = { workspace = true }

[lib]
path = "src/lib.rs"

[[bin]]
name = "export_verifier"
path = "src/bin/export_verifier.rs"

[dev-dependencies]
ark-ec = { workspace = true }
ark-snark = { workspace = true }
color-eyre = "0.6"
tokio = { version = "1", features = ["full"] }
divan = "0.1"
revm = { version = "14", default-features = false, features = ["std"] }
alloy-primitives = "0.8"
alloy-sol-types = "0.8"

[[bench]]
name = "eq_proving"
harness = false
