[package]
name = "diem-prover-plonk"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
p3-air = { workspace = true }
p3-matrix = { workspace = true }
p3-field = { workspace = true }
p3-mersenne-31 = { workspace = true }
p3-uni-stark = { workspace = true }
p3-commit = { workspace = true }
p3-fri = { workspace = true }
p3-challenger = { workspace = true }
p3-symmetric = { workspace = true }
p3-keccak = { workspace = true }
p3-merkle-tree = { workspace = true }
p3-circle = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
num-traits = { workspace = true }

[lib]
path = "src/lib.rs"

[dev-dependencies]
divan = "0.1"

[[bench]]
name = "eq_proving"
harness = false
