[package]
name = "diem-prover"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# SP1 SDK
sp1-sdk = { workspace = true }

# Note: We don't import aptos-sdk/aptos-types to avoid 1100+ dependencies.
# Instead, we define minimal types in src/types.rs and use fixture data.
# This is a proof-of-concept focused on the cryptography, not API integration.

# All dependencies use workspace = true for version consistency
ethers = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = { workspace = true }
hex = { workspace = true }
sha3 = { workspace = true }

[build-dependencies]
sp1-helper = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "proof_modes"
harness = false
