[package]
name = "diem-prover"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# SP1 SDK
sp1-sdk = { workspace = true }

# Aptos integration
aptos-sdk = "2.0"
aptos-types = "0.1"

# Ethereum integration
ethers = { version = "2.0", features = ["full"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dotenv = "0.15"

# Crypto
hex = { workspace = true }
sha3 = { workspace = true }

[build-dependencies]
sp1-helper = { workspace = true }

[[bin]]
name = "prover"
path = "src/main.rs"
