[package]
name = "diem-zkp-prover"
version = "0.1.0"
edition = "2021"
authors = ["Atomica Labs"]
license = "Apache-2.0"
description = "ZK-SNARK prover service for Diem/Aptos light client on Ethereum"

[dependencies]
# ZK proving
ark-bls12-381 = "0.4"
ark-ec = "0.4"
ark-ff = "0.4"
ark-groth16 = "0.4"
ark-relations = "0.4"
ark-serialize = "0.4"
ark-std = "0.4"

# Aptos SDK
aptos-sdk = "2.0"
aptos-crypto = "0.5"
move-core-types = "0.1"

# Ethereum
ethers = { version = "2.0", features = ["full"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
toml = "0.8"

# Crypto
sha3 = "0.10"
hex = "0.4"

# Circuit interface
num-bigint = "0.4"
num-traits = "0.2"

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"

[[bin]]
name = "prover"
path = "src/main.rs"

[[bench]]
name = "proof_generation"
harness = false
