[package]
name = "atomica-docker-testnet"
version = "0.1.0"
edition = "2021"
description = "Docker testnet harness for Atomica integration tests"
publish = false

[dependencies]
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
serde_yaml = "0.9"
ed25519-dalek = "2.0"
sha3 = "0.10"
regex = "1.10"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serial_test = "3.0"
